--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "dart.flutterSdkPath": "~/dev/flutter"
+    "dart.flutterSdkPath": "~/dev/flutter",
+    "cmake.sourceDirectory": "E:/Munajat App/munajat_e_maqbool_app/linux",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
