--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.0-100.2.beta
+  sdk: ^3.8.1
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -42,6 +42,7 @@ dependencies:
   share_plus: ^11.0.0 # For sharing content
   animated_text_kit: ^4.2.2 # For animated text
   intl: ^0.20.2 # For date formatting
+  flutter_local_notifications: ^17.1.2 # For local notifications
 
 dev_dependencies:
   flutter_test:
