feat: Implement comprehensive app theme and text color customization
- Allow users to personalize the app's primary accent color.
- Enable independent color selection for Arabic and translation text in Duas.
- Integrate new color preferences into `AppSettings` and `DuaPreferences`.
- Update `AppTheme` and UI components to support dynamic color application.
- Adjust Android build configuration for Java 8 compatibility and desugaring.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   animated_text_kit: ^4.2.2 # For animated text
   intl: ^0.20.2 # For date formatting
   flutter_local_notifications: ^17.1.2 # For local notifications
+  timezone: ^0.9.2 # For timezone support in notifications
 
 dev_dependencies:
   flutter_test:
