--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -2,7 +2,6 @@ name: Islamic App Backup System
 
 on:
   schedule:
-    # နေ့စဉ် မနက် ၃ နာရီ (UTC) / မြန်မာစံတော်ချိန် ၉:၃၀ ခန့်
     - cron: '0 3 * * *'
   workflow_dispatch:
 
@@ -14,22 +13,24 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # ၁. Tools များ သွင်းခြင်း
+      # --- ဒီနေရာမှာ IPv6 ပိတ်တဲ့ အပိုင်း အသစ်ထည့်ထားပါတယ် ---
+      - name: Disable IPv6 (Fix Network Error)
+        run: |
+          sudo sysctl -w net.ipv6.conf.all.disable_ipv6=1
+          sudo sysctl -w net.ipv6.conf.default.disable_ipv6=1
+          sudo sysctl -w net.ipv6.conf.lo.disable_ipv6=1
+      # ----------------------------------------------------
+
       - name: Install Tools
         run: |
           sudo apt-get update
           sudo apt-get install -y postgresql-client
           curl https://rclone.org/install.sh | sudo bash
 
-      # ၂. Configuration (OneDrive + Supabase S3)
       - name: Setup Configuration
         run: |
           mkdir -p ~/.config/rclone
-          
-          # OneDrive Config (GitHub Secret မှ)
           echo "${{ secrets.RCLONE_CONFIG }}" > ~/.config/rclone/rclone.conf
-          
-          # Supabase Storage Config (S3) ထပ်ပေါင်းခြင်း
           echo "" >> ~/.config/rclone/rclone.conf
           echo "[supabase_storage]" >> ~/.config/rclone/rclone.conf
           echo "type = s3" >> ~/.config/rclone/rclone.conf
@@ -40,20 +41,16 @@ jobs:
           echo "region = ${{ secrets.SUPABASE_STORAGE_REGION }}" >> ~/.config/rclone/rclone.conf
           echo "endpoint = https://${{ secrets.SUPABASE_PROJECT_REF }}.supabase.co/storage/v1/s3" >> ~/.config/rclone/rclone.conf
 
-      # ၃. Database Backup (ဖိုင်တစ်ခုတည်း၊ Zip မချုပ်ပါ)
       - name: Backup Database
         env:
           DB_URL: ${{ secrets.SUPABASE_DB_URL }}
         run: |
           echo "Backing up Database (Raw SQL)..."
-          # gzip ကို ဖြုတ်လိုက်ပါပြီ၊ .sql အတိုင်း ထွက်ပါမယ်
           pg_dump "$DB_URL" > db_backup.sql
           
           echo "Uploading Database to OneDrive..."
-          # နာမည်မှာ Space ပါလို့ မျက်တောင် "" ခံထားပါတယ်
           rclone copy db_backup.sql "onedrive:MM OASIS APP/Database/"
 
-      # ၄. Images Backup (Bucket ၄ ခုလုံးအတွက်)
       - name: Sync All Buckets
         run: |
           echo "Syncing 'masjid-images'..."
