--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -72,8 +72,9 @@ jobs:
           retention-days: 7
 
       # Build for simulator (for Appetize.io testing)
+      # Using --profile instead of --debug because debug builds don't bundle assets properly
       - name: Build iOS (Simulator)
-        run: flutter build ios --simulator --debug
+        run: flutter build ios --simulator --profile
 
       - name: Verify database in Simulator build
         run: |
