fix: Convert WAL to DELETE journal mode for iOS compatibility and add flutter clean to builds

--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -52,8 +52,10 @@ jobs:
           channel: 'stable'
           cache: true
 
-      - name: Install dependencies
-        run: flutter pub get
+      - name: Clean and get dependencies
+        run: |
+          flutter clean
+          flutter pub get
 
       # Build for physical device (unsigned)
       - name: Build iOS (Device - No Codesign)
